# proyectoDercoActualizado

proyectoDercoCodigo/: CMakeLists.txt  SucursalConMasVentasAutos.h  SucursalConMasVentasRepuestos.h  comprarProducto.h  funcionesBasicasMarcas.h  funcionesBasicasProductos.h  funcionesBasicasRegiones.h  funcionesBasicasSucursales.h  funcionesBasicasVentas.h  fusionSucursales.h  helpers.h  interfazMarca.h  interfazProductoArbol.h  interfazVentas.h  interfazesDatos.h  main.c  marcasConMasVentas.h  menus.h  modeloConMasVentas.h  productoMayorRecalls.h  promedioVentasSucursales.h  structs.h  sucursalConMasVentas.h  usuarioMayorGastado.h
